[package]
name = "momo"
version = "0.1.0"
authors = ["sammoth <sammoth.th@gmail.com>"]
edition = "2018"

[dependencies]
rayon = "1.5.0"
flume = "0.9.2"
structopt = "0.3.20"
ignore = "0.4.16"
tree_magic = "0.2.3"
mime_guess = "2.0.3"
ffav = "4.3.8"
ape = "0.3.0"
directories-next = "2.0.0"

diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
evmap = "10.0.2"
lazy_static = "1.4.0"